--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,4 +92,4 @@ add_executable(nibbler
         jsoncpp/src/lib_json/json_writer.cpp
         jsoncpp/src/test_lib_json/jsontest.cpp
         jsoncpp/src/test_lib_json/jsontest.h
-        jsoncpp/src/test_lib_json/main.cpp network/listener2.c)
+        jsoncpp/src/test_lib_json/main.cpp network/talker2.c)
