Clea external libs

--- a/externlib/display_sdl/Makefile
+++ b/externlib/display_sdl/Makefile
@@ -2,12 +2,12 @@
 
 #==========EXECUTABLES==========#
 
-EXE= nibbler_sfml.so
+EXE= display_sdl.so
 
 #=======COMPILER AND FLAGS======#
 
 CXX= clang++
-CXXFLAGS= -Wall -Wextra -Werror -Wvla -std=c++14 -fsanitize=address -g3 -fPIC -MMD 
+CXXFLAGS= -Wall -Wextra -Werror -Wvla -std=c++14 -fsanitize=address -g3 -fPIC -MMD
 #============HEADERS============#
 
 HEADER_DIR= ./include/ ../commun/
@@ -22,7 +22,8 @@ EOC=\033[0m
 
 SRC_DIR = ./src/
 
-SRC_FILE= DisplaySfml.cpp
+SRC_FILE= main.cpp \
+DisplaySdl.cpp
 
 SRC = $(addprefix $(SRC_DIR), $(SRC_FILE))
 
@@ -39,11 +40,11 @@ UNAME := $(shell uname)
 
 ADDITIONNAL_LIB=
 ifeq ($(UNAME), Linux)
-ADDITIONNAL_LIB += -L /usr/lib/ -lsfml-graphics -lsfml-window -lsfml-system
-HEADER_DIR += -I /usr/include/
+ADDITIONNAL_LIB += $(shell sdl2-config --cflags --libs) -lSDL2_image
+HEADER_DIR += $(shell sdl2-config --cflags)
 endif
 ifeq ($(UNAME), Darwin)
-ADDITIONNAL_LIB +=-L ~/.brew/lib/ -lsfml-graphics -lsfml-window -lsfml-system -rpath ~/.brew/lib
+ADDITIONNAL_LIB +=-L ~/.brew/lib/ -lSDL2 -lSDL2_image
 HEADER_DIR += ~/.brew/include/
 endif
 
