--- a/externlib/display_sfml/Makefile
+++ b/externlib/display_sfml/Makefile
@@ -2,7 +2,7 @@
 
 #==========EXECUTABLES==========#
 
-EXE= nibbler_sdl.so
+EXE= display_sfml.so
 
 #=======COMPILER AND FLAGS======#
 
@@ -22,8 +22,7 @@ EOC=\033[0m
 
 SRC_DIR = ./src/
 
-SRC_FILE= main.cpp \
-DisplaySdl.cpp
+SRC_FILE= DisplaySfml.cpp
 
 SRC = $(addprefix $(SRC_DIR), $(SRC_FILE))
 
@@ -40,11 +39,11 @@ UNAME := $(shell uname)
 
 ADDITIONNAL_LIB=
 ifeq ($(UNAME), Linux)
-ADDITIONNAL_LIB += $(shell sdl2-config --cflags --libs) -lSDL2_image
-HEADER_DIR += $(shell sdl2-config --cflags)
+ADDITIONNAL_LIB += -L /usr/lib/ -lsfml-graphics -lsfml-window -lsfml-system
+HEADER_DIR += -I /usr/include/
 endif
 ifeq ($(UNAME), Darwin)
-ADDITIONNAL_LIB +=-L ~/.brew/lib/ -lSDL2 -lSDL2_image
+ADDITIONNAL_LIB +=-L ~/.brew/lib/ -lsfml-graphics -lsfml-window -lsfml-system -rpath ~/.brew/lib
 HEADER_DIR += ~/.brew/include/
 endif
 
@@ -58,7 +57,7 @@ lol:
 $(EXE): $(OBJ_DIR) $(OBJ)
 	@echo "\t$(EXE)'s objects compiled"
 	$(CXX) $(CXXFLAGS) $(OBJ) $(ADDITIONNAL_LIB) -shared -fPIC -o $(EXE)
-	@echo "executable $(GREEN)$(EXE)$(EOC) created"
+	@echo "Dynamic Library $(GREEN)$(EXE)$(EOC) created"
 	@echo "$(GREEN)---------->>>$(EOC)"
 
 $(OBJ_DIR) :
