--- a/menu/Makefile
+++ b/menu/Makefile
@@ -22,7 +22,8 @@ EOC=\033[0m
 
 SRC_DIR = ./src/
 
-SRC_FILE= main.cpp
+SRC_FILE= main.cpp \
+ImguiMenu.cpp
 
 SRC = $(addprefix $(SRC_DIR), $(SRC_FILE))
 
