--- a/externlib/display_sdl/Makefile
+++ b/externlib/display_sdl/Makefile
@@ -22,8 +22,7 @@ EOC=\033[0m
 
 SRC_DIR = ./src/
 
-SRC_FILE= main.cpp \
-DisplaySdl.cpp
+SRC_FILE= DisplaySdl.cpp
 
 SRC = $(addprefix $(SRC_DIR), $(SRC_FILE))
 
